AEM of exit nudge

--- a/New-Car-Loan/src/app/app.html
+++ b/New-Car-Loan/src/app/app.html
@@ -3,3 +3,5 @@
 	<app-tracker></app-tracker>
 	<router-outlet></router-outlet>
 </div>
+<!-- Shared Save-to-Cart component (renders global drawer/modal) -->
+<app-save-to-cart></app-save-to-cart>
