--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
@@ -249,7 +249,7 @@ letter-spacing: 0px;
   gap: 8px;
   opacity: 1;
   flex-wrap: nowrap;
-  margin: 0 0 20px 0;
+  margin: 0 0 16px 0;
   padding: 0;
 }
 
@@ -625,6 +625,7 @@ select.form-control:-webkit-autofill {
 }
 
 .btn-outline {
+  font-size: 14px;
   background: #fff;
   color: #FF6600;
   border: 2px solid #FF6600;
@@ -632,7 +633,7 @@ select.form-control:-webkit-autofill {
   width: 50%;
   min-width: 200px;
   height: 40px;
-  padding: 12px 24px;
+  padding: 16px;
   font-weight: 500;
   cursor: pointer;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.08);
@@ -648,6 +649,7 @@ select.form-control:-webkit-autofill {
 }
 
 .btn-primary {
+  font-size: 14px;
   background: linear-gradient(90deg, #FF6700 0%, #FF8900 100%);
   color: #fff;
   border: none;
@@ -655,7 +657,7 @@ select.form-control:-webkit-autofill {
   width: 50%;
   min-width: auto;
   height: 40px;
-  padding: 12px 24px;
+  padding: 16px;
   font-weight: 500;
   cursor: pointer;
   box-shadow: 0 2px 6px rgba(255, 102, 0, 0.25);
